[package]
edition = "2021"
name = "stat_srv"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
clap = {version = "3.0.9", features = ["derive"]}
futures-util = {version = "0.3", default-features = false}
hyper = {version = "0.14", features = ["full"]}
# lazy_static = "1.4"
chrono = "0.4"
futures = "0.3"
http-auth-basic = "0.3"
log = "0.4"
mime = "0.3.16"
mime_guess = "2.0"
minijinja = "0.12"
once_cell = "1.9"
pretty_env_logger = "0.4"
reqwest = {version = "0.11", features = ["blocking", "json"]}
rust-embed = "6.3.0"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
toml = "0.5"

[profile.release]
lto = true
opt-level = "z"
