[package]
edition = "2021"
name = "stat_client"
version = "1.8.0"

rust-version = "1.76"

authors = ["doge <doge.py@gmail.com>"]
categories = ["monitoring-tools"]
description = "A simple server monitoring tool"
keywords = ["devops", "notifications", "monitoring", "dashboard", "alerting"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/zdz/ServerStatus-Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
chrono = "0.4"

[dependencies]
anyhow = "1"
bytes = {version = "1", features = ["serde"]}
chrono = "0.4"
clap = {version = "4.5", features = ["derive", "unicode", "env"]}
fastrand = "2.0.1"
hyper = {version = "1.1", features = ["full"]}
lazy_static = "1.4"
log = "0.4"
md5 = "0.7.0"
once_cell = "1"
pretty_env_logger = "0.5"
prettytable-rs = "^0.10"
prost = "0.12"
regex = "1.10"
reqwest = {version = "0.11", features = ["json", "rustls-tls", "brotli", "gzip", "deflate", "stream", "socks"], default-features = false}
rustls = { version = "0.22", default-features = false }
rustls-pemfile = { version = "2" }
serde = {version = "1.0", default-features = false, features = ["derive", "alloc"]}
serde_json = {version = "1.0", default-features = false, features = ["alloc"]}
stat_common = {path = "../common"}
sysinfo = "0.30.7"
tokio = {version = "1", features = ["full"]}
tokio-rustls = { version = "0.25" }
tonic = {version = "0.11", features = ["tls", "tls-webpki-roots", "gzip"]}
tower = { version = "0.4" }
webpki-roots = "0.26"
url = "2.5.0"

[features]
default = ["sysinfo"]
native = []
sysinfo = []
