[package]
edition = "2021"
name = "stat_client"
version = "1.8.1"

rust-version = "1.76"

authors = ["doge <doge.py@gmail.com>"]
categories = ["monitoring-tools"]
description = "A simple server monitoring tool"
keywords = ["stat_client", "serverstatus", "monitor"]
license = "Apache-2.0"
readme = "../README.md"
homepage = "https://github.com/zdz/ServerStatus-Rust"
repository = "https://github.com/zdz/ServerStatus-Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
chrono = "0.4"

[dependencies]
anyhow = "1"
bytes = {version = "1", features = ["serde"]}
chrono = "0.4"
clap = {version = "4.5", features = ["derive", "unicode", "env"]}
fastrand = "2.0.1"
hyper = {version = "1.2", features = ["full"]}
lazy_static = "1.4"
log = "0.4"
md5 = "0.7.0"
once_cell = "1"
pretty_env_logger = "0.5"
prettytable-rs = "^0.10"
prost = "0.12"
regex = "1.10"
reqwest = {version = "0.11", features = ["json", "rustls-tls", "brotli", "gzip", "deflate", "stream", "socks"], default-features = false}
rustls = { version = "0.23.5", default-features = false }
rustls-pemfile = { version = "2" }
serde = {version = "1.0", default-features = false, features = ["derive", "alloc"]}
serde_json = {version = "1.0", default-features = false, features = ["alloc"]}
stat_common = {path = "../common", version = "1.1.4"}
sysinfo = "0.30.7"
tokio = {version = "1", features = ["full"]}
tokio-rustls = { version = "0.26" }
tonic = {version = "0.11", features = ["tls", "tls-webpki-roots", "gzip"]}
tower = { version = "0.4" }
webpki-roots = "0.26"
url = "2.5.0"

[features]
default = ["sysinfo"]
native = []
sysinfo = []

[package.metadata.deb]
maintainer = "zdz <doge.py@gmail.com>"
copyright = "2021-present, zdz <doge.py@gmail.com>"
license-file = ["../LICENSE", "4"]
extended-description = """\
A simple server monitoring tool"""
section = "utility"
priority = "optional"
assets = [
    ["target/release/stat_client", "/opt/ServerStatus/", "755"],
    ["../systemd/stat_client.service", "/opt/ServerStatus/stat_client.service", "644"]
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/stat_client", dest = "/opt/ServerStatus/stat_client", mode = "0755" },
    { source = "LICENSE", dest = "/usr/share/doc/ServerStatus/LICENSE", doc = true, mode = "0644" },
    { source = "../systemd/stat_client.service", dest = "/opt/ServerStatus/stat_client.service", config = true, mode = "0644" },
]
