[package]
edition = "2021"
name = "stat_client"
version = "1.8.2"

rust-version = "1.94"

authors = ["doge <doge.py@gmail.com>"]
categories = ["monitoring-tools"]
description = "A simple server monitoring tool"
keywords = ["stat_client", "serverstatus", "monitor"]
license = "Apache-2.0"
readme = "../README.md"
homepage = "https://github.com/zdz/ServerStatus-Rust"
repository = "https://github.com/zdz/ServerStatus-Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
chrono = "0.4.43"
tonic-prost-build = "0.14.3"


[dependencies]
anyhow = "1.0.100"
bytes = {version = "1.11.0", features = ["serde"]}
chrono = "0.4.43"
clap = {version = "4.5.55", features = ["derive", "unicode", "env"]}
fastrand = "2.3.0"
hyper = {version = "1.8.1", features = ["full"]}
lazy_static = "1.5.0"
log = "0.4.29"
md5 = "0.8.0"
once_cell = "1.21.3"
pretty_env_logger = "0.5.0"
prettytable-rs = "^0.10.0"
prost = "0.14.3"
regex = "1.12.2"
reqwest = {version = "0.13.1", features = ["json", "rustls", "brotli", "gzip", "deflate", "stream", "socks"], default-features = false}
rustls = { version = "0.23.36", default-features = false }
serde = {version = "1.0.228", default-features = false, features = ["derive", "alloc"]}
serde_json = {version = "1.0.149", default-features = false, features = ["alloc"]}
stat_common = {path = "../common", version = "1.1.4"}
sysinfo = "0.38.0"
tokio = {version = "1.49.0", features = ["full"]}
tokio-rustls = { version = "0.26.4" }
tonic = {version = "0.14.3", features = ["gzip","codegen", "transport","tls-ring"]}
tower = { version = "0.5.3" }
webpki-roots = "1.0.5"
url = "2.5.8"
tonic-build = "0.14.3"
rustls-native-certs="0.8.3"
tonic-prost="0.14.3"

[features]
default = ["sysinfo"]
native = []
sysinfo = []

[package.metadata.deb]
maintainer = "zdz <doge.py@gmail.com>"
copyright = "2021-present, zdz <doge.py@gmail.com>"
license-file = ["../LICENSE", "4"]
extended-description = """\
A simple server monitoring tool"""
section = "utility"
priority = "optional"
assets = [
    ["target/release/stat_client", "/opt/ServerStatus/", "755"],
    ["../systemd/stat_client.service", "/opt/ServerStatus/stat_client.service", "644"]
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/stat_client", dest = "/opt/ServerStatus/stat_client", mode = "0755" },
    { source = "LICENSE", dest = "/usr/share/doc/ServerStatus/LICENSE", doc = true, mode = "0644" },
    { source = "../systemd/stat_client.service", dest = "/opt/ServerStatus/stat_client.service", config = true, mode = "0644" },
]