[package]
edition = "2021"
name = "stat_common"
version = "1.1.3"

authors = ["doge <doge.py@gmail.com>"]
categories = ["monitoring-tools"]
description = "A simple server monitoring tool"
keywords = ["devops", "notifications", "monitoring", "dashboard", "alerting"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/zdz/ServerStatus-Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = {version = "1", features = ["serde"]}
prost = "0.11"
serde = {version = "1.0", default-features = false, features = ["derive", "alloc"]}
tonic = {version = "0.9", features = ["tls"]}

[target.'cfg(not(target_env = "msvc"))'.build-dependencies]
chrono = "0.4"
protobuf-src = "1"
tonic-build = "0.9"

[build-dependencies]
chrono = "0.4"
tonic-build = "0.9"
