[package]
edition = "2021"
name = "stat_server"
version = "1.8.0"

rust-version = "1.76"

authors = ["doge <doge.py@gmail.com>"]
categories = ["monitoring-tools"]
description = "A simple server monitoring tool"
keywords = ["devops", "notifications", "monitoring", "dashboard", "alerting"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/zdz/ServerStatus-Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
chrono = "0.4"

[dependencies]
anyhow = "1"
axum = {version = "0.7.4"}
axum-extra = {version = "0.9.2", features = ["typed-header"]}
bytes = {version = "1", features = ["serde"]}
chrono = "0.4"
clap = {version = "4.5", features = ["derive", "unicode"]}
futures-util = {version = "0.3", default-features = false}
hyper = {version = "1.2", features = ["full"]}
jsonwebtoken = "9.2"
lazy_static = "1.4"
lettre = {version = "0.11", default-features = false, features = ["smtp-transport", "pool", "hostname", "builder", "rustls-tls", "tokio1-rustls-tls"]}
log = "0.4"
minijinja = {version = "1.0", features = ["json", "loader"]}
mime_guess = { version = "2" }
once_cell = "1"
pki-types = { package = "rustls-pki-types", version = "1" }
pretty_env_logger = "0.5"
prettytable-rs = "^0.10"
prost = "0.12"
reqwest = {version = "0.11", features = ["json", "rustls-tls"], default-features = false}
rhai = {version = "1.17", features = ["sync", "metadata", "decimal", "no_function", "no_module", "no_closure", "unchecked"]}
rust-embed = {version = "8.2", features = ["mime-guess"]}
rustls-pemfile = { version = "2" }
serde = {version = "1.0", default-features = false, features = ["derive", "alloc"]}
serde_json = {version = "1.0", default-features = false, features = ["alloc"]}
stat_common = {path = "../common"}
tokio = {version = "1", features = ["full"]}
tokio-rustls = { version = "0.25" }
toml = "0.8"
tonic = {version = "0.11", features = ["tls", "tls-webpki-roots", "gzip"]}
tower-http = { version = "0.5", features = ["cors", "add-extension"] }
url = "2.5.0"
uuid = {version = "1.7", default-features = false, features = ["serde", "v4"]}