[package]
edition = "2021"
name = "stat_server"
version = "1.8.1"

rust-version = "1.76"

authors = ["doge <doge.py@gmail.com>"]
categories = ["monitoring-tools"]
description = "A simple server monitoring tool"
keywords = ["stat_server", "serverstatus", "monitor"]
license = "Apache-2.0"
readme = "../README.md"
homepage = "https://github.com/zdz/ServerStatus-Rust"
repository = "https://github.com/zdz/ServerStatus-Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
chrono = "0.4"

[dependencies]
anyhow = "1"
axum = {version = "0.7.4"}
axum-extra = {version = "0.9.2", features = ["typed-header"]}
bytes = {version = "1", features = ["serde"]}
chrono = "0.4"
clap = {version = "4.5", features = ["derive", "unicode"]}
futures-util = {version = "0.3", default-features = false}
hyper = {version = "1.2", features = ["full"]}
jsonwebtoken = "9.2"
lazy_static = "1.4"
lettre = {version = "0.11", default-features = false, features = ["smtp-transport", "pool", "hostname", "builder", "rustls-tls", "tokio1-rustls-tls"]}
log = "0.4"
md5 = "0.7.0"
minijinja = {version = "1.0", features = ["json", "loader"]}
mime_guess = { version = "2" }
once_cell = "1"
pki-types = { package = "rustls-pki-types", version = "1" }
pretty_env_logger = "0.5"
prettytable-rs = "^0.10"
prost = "0.12"
reqwest = {version = "0.11", features = ["json", "rustls-tls"], default-features = false}
rhai = {version = "1.17", features = ["sync", "metadata", "decimal", "no_function", "no_module", "no_closure", "unchecked"]}
rust-embed = {version = "8.3", features = ["mime-guess"]}
rustls-pemfile = { version = "2" }
serde = {version = "1.0", default-features = false, features = ["derive", "alloc"]}
serde_json = {version = "1.0", default-features = false, features = ["alloc"]}
stat_common = {path = "../common", version = "1.1.4"}
tokio = {version = "1", features = ["full"]}
tokio-rustls = { version = "0.26" }
toml = "0.8"
tonic = {version = "0.11", features = ["tls", "tls-webpki-roots", "gzip"]}
tower-http = { version = "0.5", features = ["cors", "add-extension"] }
url = "2.5.0"
uuid = {version = "1.7", default-features = false, features = ["serde", "v4"]}

[package.metadata.deb]
maintainer = "zdz <doge.py@gmail.com>"
copyright = "2021-present, zdz <doge.py@gmail.com>"
license-file = ["../LICENSE", "4"]
extended-description = """\
A simple server monitoring tool"""
section = "utility"
priority = "optional"
assets = [
    ["../config.toml", "/opt/ServerStatus/", "644"],
    ["target/release/stat_server", "/opt/ServerStatus/", "755"],
    ["../systemd/stat_server.service", "/opt/ServerStatus/stat_server.service", "644"]
]

[package.metadata.generate-rpm]
assets = [
    { source = "config.toml", dest = "/opt/ServerStatus/config.toml", mode = "0644" },
    { source = "target/release/stat_server", dest = "/opt/ServerStatus/stat_server", mode = "0755" },
    { source = "LICENSE", dest = "/usr/share/doc/ServerStatus/LICENSE", doc = true, mode = "0644" },
    { source = "../systemd/stat_server.service", dest = "/opt/ServerStatus/stat_server.service", config = true, mode = "0644" },
]
