[package]
edition = "2021"
name = "stat_server"
version = "1.8.2"

rust-version = "1.76"

authors = ["doge <doge.py@gmail.com>"]
categories = ["monitoring-tools"]
description = "A simple server monitoring tool"
keywords = ["stat_server", "serverstatus", "monitor"]
license = "Apache-2.0"
readme = "../README.md"
homepage = "https://github.com/zdz/ServerStatus-Rust"
repository = "https://github.com/zdz/ServerStatus-Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
chrono = "0.4.43"
tonic-prost-build = "0.14.3"


[dependencies]
anyhow = "1.0.100"
axum = {version = "0.8.8"}
axum-extra = {version = "0.12.5", features = ["typed-header"]}
bytes = {version = "1.11.0", features = ["serde"]}
chrono = "0.4.43"
clap = {version = "4.5.57", features = ["derive", "unicode"]}
futures-util = {version = "0.3.31", default-features = false}
hyper = {version = "1.8.1", features = ["full"]}
jsonwebtoken = "10.3.0"
lazy_static = "1.5.0"
lettre = {version = "0.11.19", default-features = false, features = ["smtp-transport", "pool", "hostname", "builder", "rustls-tls", "tokio1-rustls-tls"]}
log = "0.4.29"
md5 = "0.8.0"
minijinja = {version = "2.15.1", features = ["json", "loader"]}
mime_guess = { version = "2.0.5" }
once_cell = "1.21.3"
pki-types = { package = "rustls-pki-types", version = "1.14.0" }
pretty_env_logger = "0.5.0"
prettytable-rs = "^0.10.0"
prost = "0.14.3"
reqwest = {version = "0.13.1", features = ["json", "rustls"], default-features = false}
rhai = {version = "1.24.0", features = ["sync", "metadata", "decimal", "no_function", "no_module", "no_closure", "unchecked"]}
rust-embed = {version = "8.11.0", features = ["mime-guess"]}
rustls-pemfile = { version = "2.2.0" }
serde = {version = "1.0.228", default-features = false, features = ["derive", "alloc"]}
serde_json = {version = "1.0.149", default-features = false, features = ["alloc"]}
stat_common = {path = "../common", version = "1.1.4"}
tokio = {version = "1.49.0", features = ["full"]}
tokio-rustls = { version = "0.26.4" }
toml = "0.9.8"
tonic = {version="0.14.3",features = ["_tls-any"]}
tower-http = { version = "0.6.8", features = ["cors", "add-extension"] }
url = "2.5.8"
uuid = {version = "1.20.0", default-features = false, features = ["serde", "v4"]}
async-trait = "0.1.89"
tonic-prost="0.14.3"

[package.metadata.deb]
maintainer = "zdz <doge.py@gmail.com>"
copyright = "2021-present, zdz <doge.py@gmail.com>"
license-file = ["../LICENSE", "4"]
extended-description = """\
A simple server monitoring tool"""
section = "utility"
priority = "optional"
assets = [
    ["../config.toml", "/opt/ServerStatus/", "644"],
    ["target/release/stat_server", "/opt/ServerStatus/", "755"],
    ["../systemd/stat_server.service", "/opt/ServerStatus/stat_server.service", "644"]
]

[package.metadata.generate-rpm]
assets = [
    { source = "config.toml", dest = "/opt/ServerStatus/config.toml", mode = "0644" },
    { source = "target/release/stat_server", dest = "/opt/ServerStatus/stat_server", mode = "0755" },
    { source = "LICENSE", dest = "/usr/share/doc/ServerStatus/LICENSE", doc = true, mode = "0644" },
    { source = "../systemd/stat_server.service", dest = "/opt/ServerStatus/stat_server.service", config = true, mode = "0644" },
]



[profile.release]
opt-level = "z"      # 优化文件大小 (s 是优化速度和体积，z 是极致体积)
lto = true           # 开启链接时优化 (跨模块删除无用代码)
codegen-units = 1    # 限制并行编译单元，增加优化空间
panic = "abort"      # 发生 panic 时直接退出，不包含回溯栈信息 (减小体积明显)
strip = true         # 自动从生成的二进制文件中剥离符号信息